<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_category_0">
    <SwitchPreference
        android:defaultValue="true"
        android:key="gps_allow"
        android:id="@+id/gps_allow"
        android:summary="@string/setting_summary_0"
        android:title="@string/setting_title_0" />

    <SwitchPreference
        android:textColor="#808080"
        android:enabled="false"
        android:shadowColor="#808080"
        android:clickable="false"
        android:defaultValue="false"
        android:key="live_allow"
        android:id="@+id/live_allow"
        android:summary="@string/setting_summary_1"
        android:title="@string/setting_title_1" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/message_distance"
        android:entryValues="@array/message_distance_values"
        android:key="message_distance"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/setting_summary_2"
        android:title="@string/setting_title_2" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_3">

      <PreferenceScreen android:title="Contact">
          <intent
              android:action="android.intent.action.VIEW"
              android:data="http://www.tracebrace.site"
              />
      </PreferenceScreen>
        <Preference android:title="@string/setting_title_4">
            <!--
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.olx.ba/pretraga?trazilica=Golf+2+povoljno"
                />
                -->
        </Preference>
        <Preference android:title="@string/setting_title_5">
            <!--
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://play.google.com/store/apps/details?id=tracebrace.tracebrace_final"
                    />
                    -->
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="Disclaimer">

        <Preference
            android:summary="Development of the application is part of UN Women project „ Standards and Engagement for Ending Violence against Women and Domestic Violence in Bosnia and Herzegovina“ financially supported by the Swedish International Development Cooperation Agency (Sida).">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.unwomen.org/en"
                />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
